--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
+    "cheerio-tableparser": "^1.0.1",
     "moment": "^2.24.0",
     "mongodb": "^3.5.5",
+    "natural": "^0.6.3",
     "node-fetch": "^2.6.0",
+    "node-nlp": "^4.2.1",
     "puppeteer": "^2.1.1",
+    "tabletojson": "^2.0.3",
     "whatsapp-web.js": "^1.2.5"
   }
 }
